--- a/user-management-service/application.yml
+++ b/user-management-service/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      host: localhost
+      host: ip-172-31-32-92
       port: 27017
       username: root
       password: root
