--- a/user-management-service/application.yml
+++ b/user-management-service/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      host: ip-172-31-32-92
+      host: ec2-35-154-155-195.ap-south-1.compute.amazonaws.com
       port: 27017
       username: root
       password: root
