--- a/user-management-service/application.yml
+++ b/user-management-service/application.yml
@@ -10,4 +10,4 @@ spring:
 server:
   #port: 8000
   servlet:
-    context-path: ${spring.application.name}
+    context-path: user-management-service
