--- a/role-service/application.yml
+++ b/role-service/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      host: 13.233.111.215 #ec2-35-154-155-195.ap-south-1.compute.amazonaws.com
+      host: localhost #ec2-35-154-155-195.ap-south-1.compute.amazonaws.com
       port: 27017
       username: mongo-admin
       password: mongo-admin
