--- a/role-service/application.yml
+++ b/role-service/application.yml
@@ -10,3 +10,7 @@ spring:
 server:
   servlet:
     context-path: /role-service
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
