--- a/role-service/application.yml
+++ b/role-service/application.yml
@@ -10,7 +10,7 @@ spring:
       username: mongo-admin
       password: mongo-admin
       database: role-service-db
-      authentication-database: admin
+      authentication-database: admin2
 server:
   servlet:
     context-path: /role-service
